--- a/index.html
+++ b/index.html
@@ -9,4 +9,5 @@ title: Home
   {% include education.html %}
   {% include reviews.html %}
   {% include contact.html %}
+  {% include faq.html %}
 </div>
