--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ title: Home
   {% include about.html %}
   {% include skills.html %}
   {% include education.html %}
-  <!-- {% include reviews.html %} -->
+  {% include reviews.html %}
   {% include contact.html %}
   {% include faq.html %}
 </div>
